--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ input[type=radio] {
       <div class="container-fluid" style = "text-decoration-color: white;">
         <div class = "navbar-header">
           <a class="navbar-brand" href="#">
-            <img src="C:\Users\draps\OneDrive\Pictures\Skapa-Creation_480x480_1_512x1040.png" alt="siteLogo" width="30" height="30">
+            <img src="images/siteLogo.png" alt="siteLogo" width="30" height="30">
           </a>
         </div>
         <!--
@@ -125,7 +125,7 @@ input[type=radio] {
                 administrative oversight, checking for quality, while utilizing SCRUM procedures.</p>
             </div>
             <div class = "col" style = "text-align: right;">
-              <img src = "C:\Users\draps\Downloads\devs-dan-resize.jpg" style = "border-radius: 20px;">
+              <img src = "images/devs-dan-resize.jpg" style = "border-radius: 20px;">
             </div>
             </div>
           </div>
@@ -139,13 +139,13 @@ input[type=radio] {
           <input type="radio" name="slider" id="item-3">
         <div class="cards">
           <label class="card" for="item-1" id="song-1">
-            <img src= "C:\Users\draps\OneDrive\Pictures\campAIgn-landing.jpg" alt="song" id = "img-carousel">
+            <img src= "images/campAIgn-landing.jpg" alt="song" id = "img-carousel">
           </label>
           <label class="card" for="item-2" id="song-2">
-            <img src= "C:\Users\draps\OneDrive\Pictures\add-campaign.jpg" alt="song" id = "img-carousel">
+            <img src= "images/add-campaign.jpg" alt="song" id = "img-carousel">
           </label>
           <label class="card" for="item-3" id="song-3">
-            <img src= "C:\Users\draps\OneDrive\Pictures\JalHeaven-Homepage-Screenshot.jpg" alt="song" id = "image-carousel">
+            <img src= "images/JalHeaven-Homepage-Screenshot.jpg" alt="song" id = "image-carousel">
           </label>
         </div>
 
