--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ input[type=radio] {
               <p class="lead" style = "color: white; text-decoration: underline;">UX Designer </p>
               <p style = "color: white;">Thank you for choosing to visit my personal website.  I intend for it to act as a sort of general example of my work, while providing some insight into myself.</p>
               <p style = "color: white;">Below is a sample of some work that I have done, much of which collaboratively with teams ranging from 3-6 people, and with various 
-                administrative oversight, checking for quality, while utilizing SCRUM procedures.</p>
+                administrative oversight, checking for quality, while utilizing AGILE.</p>
               
               <p>
                 <a href="portfolio.html" style="display: inline-block; padding: 10px 20px; background-color: rgb(255, 255, 255); color: rgb(0, 0, 0); text-decoration: none; border-radius: 5px; font-size: 16px;"> Go to Portfolio</a>
