more text updates

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ input[type=radio] {
               <p></p>
               <p class="lead" style = "color: white; text-decoration: underline;">UX Designer </p>
               <p style = "color: white;">Thank you for choosing to visit my personal website.  I intend for it to act as a sort of general example of my work, while providing some insight into myself.</p>
-              <p style = "color: white;">Below is a sample of some work that I have done, much of which collaboratively with teams ranging from 3-6 people, and with various 
+              <p style = "color: white;">Within the portfolio page is a sample of some work that I have done, much of which collaboratively with teams ranging from 3-6 people, and with various 
                 administrative oversight, checking for quality, while utilizing AGILE.</p>
               
               <p>
