Added Shoppe photos

--- a/portfolio.html
+++ b/portfolio.html
@@ -112,54 +112,72 @@ input[type=radio] {
         <div class = "row" style = "text-align: left; padding-left: 40px; padding-top: 20px; padding-bottom: 75px; font-size: 50px;">
             Portfolio
         </div>
-        <div class = "row" style = "text-align: center; font-size: 25px">
-            <strong> Various University Projects </strong>
-            <p style = "font-size: 15px;">During my attendance as a computer science major, I worked in multiple groups to create various applications from start to finish. <br>
-                The first of these was for a UX/UI course that required us to reimagine a pre-existing website for a restaurant.<br>
-                While simple, it implements several key design concepts pertaining to optimized human-computer interaction including <br>
-                proper signaling through bordering and spacing, standard iconography for signaling, and recognizable page structure.  I <br>
-                additionally worked on an AI generative application that served to provide small businesses the ability to create <br>
-                customizalbe advertisements utilizing the OpenAI API, and then publish these ads to the social media of their choosing. <br>
-                I primarily worked on the frontend for this project alongside two others focusing on backend and database development. <br>
-                I had to implement components such as form overlays, folder structure display, and overall styling/ design choices. <br>
-                Both of these projects were limited to a semester, so time was limited.  In the future I intend to modify these projects <br>
-                to better reflect a more robust and clean user interface.
-                </p>
-
-            <p style = "font-size: 15px; padding-bottom: 40px;"> 
-                <a href = "https://github.com/JPWarr7/AI-Campaign-Manager.git">Link to source code (application non-active)</a>
-            </p>
-        </div>
-        <div class = "row" style = "text-align: center;">
-            <div class = "col">
-                <img src = "images/campAIgn-landing.jpg" style = "width: 400px; height: 225px;">
-            </div>
-            <div class = "col">
-                <img src = "images/add-campaign.jpg" style = "width: 400px; height: 225px;">
-            </div>
-            <div class = "col" style= "padding-bottom: 150px;">
-                <img src = "images/JalHeaven-Homepage-Screenshot.jpg" style = "width: 400px; height: 225px;">
-            </div>
-        </div>
-
 
         <div class = "row" style = "text-align: center; font-size: 25px">
-            <strong> Figma Project: "Borders Social" </strong>
-            <p style = "font-size: 15px;">A few pages designed in figma for a fictional skateboarder social media site.</p>
-            <p style = "font-size: 15px; padding-bottom: 40px;"> 
-            </p>
+          <strong> Figma Project: "The Shoppe" </strong>
+          <p style = "font-size: 15px;">Pages designed in figma for a fictional shopping website that include a homepage, and a prodcuts page.</p>
+          <p style = "font-size: 15px; padding-bottom: 40px;"> 
+          </p>
+      </div>
+      <div class = "row" style = "text-align: center;">
+          <div class = "col">
+              <img src = "images/ShoppeHome.png" style = "width: 400px; height: 250px;">
+          </div>
+          <div class = "col">
+              <img src = "images/ShoppeProducts.png" style = "width: 400px; height: 250px;">
+          </div>
+      </div>
+
+      <div class = "row" style = "text-align: center; font-size: 25px">
+        <strong> Figma Project: "Borders Social" </strong>
+        <p style = "font-size: 15px;">A few pages designed in figma for a fictional skateboarder social media site.</p>
+        <p style = "font-size: 15px; padding-bottom: 40px;"> 
+        </p>
+    </div>
+    <div class = "row" style = "text-align: center;">
+        <div class = "col">
+            <img src = "images/borderslanding.png" style = "width: 400px; height: 250px;">
         </div>
-        <div class = "row" style = "text-align: center;">
-            <div class = "col">
-                <img src = "images/borderslanding.png" style = "width: 400px; height: 250px;">
-            </div>
-            <div class = "col">
-                <img src = "images/bordersprofilecrop.png" style = "width: 400px; height: 500px;">
-            </div>
-            <div class = "col" style = "padding-bottom: 150px;">
-                <img src = "images/bordersaccount.png" style = "width: 400px; height: 500px;">
-            </div>
+        <div class = "col">
+            <img src = "images/bordersprofilecrop.png" style = "width: 400px; height: 500px;">
         </div>
+        <div class = "col" style = "padding-bottom: 150px;">
+            <img src = "images/bordersaccount.png" style = "width: 400px; height: 500px;">
+        </div>
+    </div>
+
+      <div class = "row" style = "text-align: center; font-size: 25px">
+          <strong> Various University Projects </strong>
+          <p style = "font-size: 15px;">During my attendance as a computer science major, I worked in multiple groups to create various applications from start to finish. <br>
+              The first of these was for a UX/UI course that required us to reimagine a pre-existing website for a restaurant.<br>
+              While simple, it implements several key design concepts pertaining to optimized human-computer interaction including <br>
+              proper signaling through bordering and spacing, standard iconography for signaling, and recognizable page structure.  I <br>
+              additionally worked on an AI generative application that served to provide small businesses the ability to create <br>
+              customizalbe advertisements utilizing the OpenAI API, and then publish these ads to the social media of their choosing. <br>
+              I primarily worked on the frontend for this project alongside two others focusing on backend and database development. <br>
+              I had to implement components such as form overlays, folder structure display, and overall styling/ design choices. <br>
+              Both of these projects were limited to a semester, so time was limited.  In the future I intend to modify these projects <br>
+              to better reflect a more robust and clean user interface.
+              </p>
+
+          <p style = "font-size: 15px; padding-bottom: 40px;"> 
+              <a href = "https://github.com/JPWarr7/AI-Campaign-Manager.git">Link to source code (application non-active)</a>
+          </p>
+      </div>
+      <div class = "row" style = "text-align: center;">
+          <div class = "col">
+              <img src = "images/campAIgn-landing.jpg" style = "width: 400px; height: 225px;">
+          </div>
+          <div class = "col">
+              <img src = "images/add-campaign.jpg" style = "width: 400px; height: 225px;">
+          </div>
+          <div class = "col" style= "padding-bottom: 150px;">
+              <img src = "images/JalHeaven-Homepage-Screenshot.jpg" style = "width: 400px; height: 225px;">
+          </div>
+      </div>
+
+
+
 
     
 
