--- a/portfolio.html
+++ b/portfolio.html
@@ -84,6 +84,42 @@ input[type=radio] {
   margin: 50px; 
 }
 
+.thumbnail {
+            width: 200px; /* Small preview size */
+            cursor: pointer;
+            transition: transform 0.3s ease-in-out;
+        }
+
+        /* Modal Background */
+        .modal {
+            display: none; /* Hidden by default */
+            position: fixed;
+            z-index: 1000;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.8);
+            justify-content: center;
+            align-items: center;
+        }
+
+        /* Enlarged Image */
+        .modal img {
+            max-width: 90%;
+            max-height: 90%;
+            border-radius: 10px;
+        }
+
+        /* Close Button */
+        .close {
+            position: absolute;
+            top: 20px;
+            right: 30px;
+            font-size: 40px;
+            color: white;
+            cursor: pointer;
+        }
 
 
 
@@ -116,33 +152,55 @@ input[type=radio] {
         <div class = "row" style = "text-align: center; font-size: 25px">
           <strong> Figma Project: "The Shoppe" </strong>
           <p style = "font-size: 15px;">Pages designed in figma for a fictional shopping website that include a homepage, and a prodcuts page.</p>
-          <p style = "font-size: 15px; padding-bottom: 40px;"> 
+          <p style = "font-size: 15px; padding-bottom: 25px;"> 
           </p>
       </div>
       <div class = "row" style = "text-align: center;">
           <div class = "col">
-              <img src = "images/ShoppeHome.png" style = "width: 400px; height: 250px;">
+              <img src = "images/ShoppeHome.png" alt="Thumbnail" class="thumbnail" onclick="openModal()" style = "width: 500px; height: 300px;">
+              <div class="modal" id="imageModal">
+                <span class="close" onclick="closeModal()">&times;</span>
+                <img id="modalImage" src="" alt="Enlarged Image">
+            </div>
           </div>
           <div class = "col">
-              <img src = "images/ShoppeProducts.png" style = "width: 400px; height: 250px;">
+              <img src = "images/ShoppeProducts.png" alt="Thumbnail" class="thumbnail" onclick="openModal()" style = "width: 500px; height: 300px;">
+              <div class="modal" id="imageModal">
+                <span class="close" onclick="closeModal()">&times;</span>
+                <img id="modalImage" src="" alt="Enlarged Image">
+            </div>
           </div>
       </div>
+      <p>
+      </p>
 
-      <div class = "row" style = "text-align: center; font-size: 25px">
+      <div class = "row" style = "text-align: center; font-size: 25px; padding-top: 50px;">
         <strong> Figma Project: "Borders Social" </strong>
         <p style = "font-size: 15px;">A few pages designed in figma for a fictional skateboarder social media site.</p>
-        <p style = "font-size: 15px; padding-bottom: 40px;"> 
+        <p style = "font-size: 15px; padding-bottom: 25px;"> 
         </p>
     </div>
     <div class = "row" style = "text-align: center;">
         <div class = "col">
-            <img src = "images/borderslanding.png" style = "width: 400px; height: 250px;">
+            <img src = "images/borderslanding.png" alt="Thumbnail" class="thumbnail" onclick="openModal()" style = "width: 400px; height: 250px;">
+            <div class="modal" id="imageModal">
+              <span class="close" onclick="closeModal()">&times;</span>
+              <img id="modalImage" src="" alt="Enlarged Image">
+          </div>
         </div>
         <div class = "col">
-            <img src = "images/bordersprofilecrop.png" style = "width: 400px; height: 500px;">
+            <img src = "images/bordersprofilecrop.png" alt="Thumbnail" class="thumbnail" onclick="openModal()" style = "width: 400px; height: 500px;">
+            <div class="modal" id="imageModal">
+              <span class="close" onclick="closeModal()">&times;</span>
+              <img id="modalImage" src="" alt="Enlarged Image">
+          </div>
         </div>
-        <div class = "col" style = "padding-bottom: 150px;">
-            <img src = "images/bordersaccount.png" style = "width: 400px; height: 500px;">
+        <div class = "col" style = "padding-bottom: 50px;">
+            <img src = "images/bordersaccount.png" alt="Thumbnail" class="thumbnail" onclick="openModal()" style = "width: 400px; height: 500px;">
+            <div class="modal" id="imageModal">
+              <span class="close" onclick="closeModal()">&times;</span>
+              <img id="modalImage" src="" alt="Enlarged Image">
+          </div>
         </div>
     </div>
 
@@ -166,13 +224,25 @@ input[type=radio] {
       </div>
       <div class = "row" style = "text-align: center;">
           <div class = "col">
-              <img src = "images/campAIgn-landing.jpg" style = "width: 400px; height: 225px;">
+              <img src = "images/campAIgn-landing.jpg" alt="Thumbnail" class="thumbnail" onclick="openModal()" style = "width: 400px; height: 225px;">
+              <div class="modal" id="imageModal">
+                <span class="close" onclick="closeModal()">&times;</span>
+                <img id="modalImage" src="" alt="Enlarged Image">
+            </div>
           </div>
           <div class = "col">
-              <img src = "images/add-campaign.jpg" style = "width: 400px; height: 225px;">
+              <img src = "images/add-campaign.jpg" alt="Thumbnail" class="thumbnail" onclick="openModal()" style = "width: 400px; height: 225px;">
+              <div class="modal" id="imageModal">
+                <span class="close" onclick="closeModal()">&times;</span>
+                <img id="modalImage" src="" alt="Enlarged Image">
+            </div>
           </div>
           <div class = "col" style= "padding-bottom: 150px;">
-              <img src = "images/JalHeaven-Homepage-Screenshot.jpg" style = "width: 400px; height: 225px;">
+              <img src = "images/JalHeaven-Homepage-Screenshot.jpg" alt="Thumbnail" class="thumbnail" onclick="openModal()" style = "width: 400px; height: 225px;">
+              <div class="modal" id="imageModal">
+                <span class="close" onclick="closeModal()">&times;</span>
+                <img id="modalImage" src="" alt="Enlarged Image">
+            </div>
           </div>
       </div>
 
@@ -197,6 +267,32 @@ input[type=radio] {
 });
 
     </script>
+
+<script>
+  // Get all images with class 'thumbnail'
+  const images = document.querySelectorAll(".thumbnail");
+  const modal = document.getElementById("imageModal");
+  const modalImg = document.getElementById("modalImage");
+
+  images.forEach(img => {
+      img.addEventListener("click", function() {
+          modal.style.display = "flex";
+          modalImg.src = this.src; // Set clicked image as modal image
+      });
+  });
+
+  function closeModal() {
+      modal.style.display = "none";
+  }
+
+  // Close modal if user clicks outside the image
+  modal.addEventListener("click", function(event) {
+      if (event.target === modal) {
+          closeModal();
+      }
+  });
+</script>
+  
 </body>
 <footer>
     
