spacing and text tweaks

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
         <h1 class="display-4">Daniel Rapuano</h1>
         <p class="lead text-decoration-underline">UX Designer</p>
         <p>Thank you for choosing to visit my personal website. It provides examples of my work and insight into my background.</p>
-        <p>Within the portfolio page is a sample of projects I contributed to collaboratively, following AGILE methodologies.</p>
-        <a href="portfolio.html" class="btn btn-light mt-3">Go to Portfolio</a>
+        <p>Within the portfolio page is a sample of projects I contributed to collaboratively, following AGILE methodology, as well as figma pages I have created.</p>
+        <a href="portfolio.html" class="btn btn-light mt-3 mb-4">Go to Portfolio</a>
       </div>
       <div class="col-md-6 text-center">
         <img src="images/devs-dan-resize.jpg" alt="Daniel Rapuano" class="img-fluid rounded">
