--- a/portfolio.html
+++ b/portfolio.html
@@ -82,8 +82,11 @@
         <div class="col">
           <strong style="font-size: 1.5rem;">Various University Projects</strong>
           <p class="small">
-            During my time as a Computer Science major, I worked in multiple groups to create applications...<br>
-            (Summarize here if you want it tighter)
+            During my time as a Computer Science major, I worked in multiple groups to create applications.<br>
+            The following are screenshots from two of those projects:
+            <ul class="list-unstyled">
+              <li><strong>AI Campaign Manager</strong>: A web application that allows users to create and manage ad campaigns using the OpenAI API.</li>
+              <li><strong>Jalapeno Heaven</strong>: An existing restaurant website we overhauled that showcases the menu and allows users to place orders.</li>
           </p>
           <a href="https://github.com/JPWarr7/AI-Campaign-Manager.git" class="btn btn-primary" target="_blank">View Source Code</a>
         </div>
