--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
 
 <!-- Navbar -->
-<nav class="navbar navbar-expand-lg" style="background-color: rgb(59, 59, 212);">
+<nav class="navbar navbar-expand-lg" style="background-color: rgb(59, 59, 212); box-shadow: rgba(59, 59, 212, 0.2);">
   <div class="container">
     <a class="navbar-brand" href="index.html">
       <img src="images/siteLogo-negate.png" alt="Site Logo" width="30" height="30">
@@ -33,6 +33,7 @@
     </div>
   </div>
 </nav>
+<br>
 
 <!-- Hero Section -->
 <div class="jumbotron text-center text-white py-5" style="background-color: rgb(59, 59, 212);">
@@ -40,9 +41,9 @@
     <div class="row align-items-center">
       <div class="col-md-6">
         <h1 class="display-4">Daniel Rapuano</h1>
-        <p class="lead text-decoration-underline">UX Designer</p>
-        <p>Thank you for choosing to visit my personal website. It provides examples of my work and insight into my background.</p>
-        <p>Within the portfolio page is a sample of projects I contributed to collaboratively, following AGILE methodology, as well as figma pages I have created.</p>
+        <p class="lead text-decoration-underline">UI/UX Designer / Frontend Developer </p>
+        <p>Welcome to my personal website. It provides examples of my work located in the portfolio,  as well as insight into my background. Located at the bottom of the page</p>
+        <p>Within the portfolio page is a sample of projects I contributed to either collaboratively, following AGILE methodology and deadlines, as well various personal projects including Figma designs and protypes I've coded.</p>
         <a href="portfolio.html" class="btn btn-light mt-3 mb-4">Go to Portfolio</a>
       </div>
       <div class="col-md-6 text-center">
@@ -60,20 +61,23 @@
 <!-- Carousel Section -->
 <section class="container my-5">
   <div class="row justify-content-center">
-    <div class="col-12 col-md-8"> <!-- smaller width on desktop -->
+    <div class="row"> <!-- smaller width on desktop -->
       <div id="portfolioCarousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
         <div class="carousel-inner rounded shadow">
           <div class="carousel-item active">
-            <img src="images/campAIgn-landing.jpg" class="d-block w-100 img-fluid" alt="Project 1">
+            <img src="images/QuikStockData.png" class="d-block w-100 img-fluid" alt="Project 1">
           </div>
           <div class="carousel-item">
-            <img src="images/add-campaign.jpg" class="d-block w-100 img-fluid" alt="Project 2">
+            <img src="images/ShoppePants.png" class="d-block w-100 img-fluid" alt="Project 2">
           </div>
           <div class="carousel-item">
-            <img src="images/borderslandingnotrans.jpg" class="d-block w-100 img-fluid" alt="Project 3">
+            <img src="images/add-campaign.jpg" class="d-block w-100 img-fluid" alt="Project 3">
           </div>
           <div class="carousel-item">
-            <img src="images/ShoppeHome.png" class="d-block w-100 img-fluid" alt="Project 4">
+            <img src="images/ShoppeLanding.png" class="d-block w-100 img-fluid" alt="Project 4">
+          </div>
+          <div class="carousel-item">
+            <img src="images/borderslandingnotrans.jpg" class="d-block w-100 img-fluid" alt="Project 5">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#portfolioCarousel" data-bs-slide="prev">
@@ -93,16 +97,27 @@
 <!-- Summary Section -->
 <div class="container my-5">
   <div class="row justify-content-center">
-    <div class="col-md-8">
+    <div class="col-lg-10 col-md-8">
       <div class="card summary-card p-4">
-        <h4 class="card-title">A Summary of Me and My Work</h4>
+        <h4 class="card-title">A Brief Summary of Me</h4>
         <p class="card-text mt-3">
-          Computer science and human psychology are the apex of modern business. I understood this early on, now having degrees in both.
-          My education and experience have given me skills in accredited psychological research, AI development within teams using industry practices,
-          and building UI/UX pipelines from scratch.
-        </p>
-        <p class="card-text">
-          I bring a strong mix of technical knowledge, front-end development skills, and a deep understanding of human behavior to modern product design.
+          Computer science and human psychology are the apex of modern business. I understood this early on, now having degrees in both. I graduated
+          in 2017 from the University of Connecticut with a BA in Psychological Sciences, and in 2024 from the Southern Connecticut State University
+          with a BS in Computer Science.  Throughout my education, when I wasn't studying, I was almost always working.  These jobs may have been 
+          menial, such as being a cook, or a cashier, but they taught me how to work under stress with a team efficeintly, as well as how to work with customers.
+          </p>
+
+          <p class ="card-text">
+          My education and experience have given me skills through accredited psychological research, application design and development
+          including usability testing with a focus on UX, front-end and back-end development utilizing technologies such as HTML, Bootstrap, 
+          Tailwind, JavaScript, React, and more.  Futhermore, I have experience with various design tools including Figma and Adobe Creative Suite.
+          My mix of both psychological and technical knowledge allows me to fully understand, and execute the application design process from start to finish,
+          with a focus on how the user will interact with the product.
+          </p>
+
+          <p class ="card-text">
+          I strongly believe as technology continues to permeate our lives, and as we become increasingly reliant on it, the need for a human-centered approach to design is paramount.
+          I am passionate about creating products that are not only functional but also enjoyable and natural to use. I strive to create designs that are intuitive, accessible, and engaging.
         </p>
       </div>
     </div>
