text changes, initial  shredded commit

--- a/portfolio.html
+++ b/portfolio.html
@@ -52,7 +52,7 @@
           <p class="small">A basic applicaiton to look up stock data using the Finnhub API; 
             from wireframing, to usability testing, to functional prototype. It's functionality 
             is limited to a basic searh of a company's stock info, due to limitations of Finnhub's 
-            free tier (the chart image is a placeholder as that feature is included in the paid tier). 
+            free tier. 
             My goal was not create a detailed applicaiton, but to show my ability to 
             create a functional prototype and to show my design process.  That, I am able to not
             only design a product itteratively through user feedback, but also program the front-end, 
@@ -96,7 +96,11 @@
             <h4 class="card-title" style = "padding: 5px;">Landing Page</h4>
             <img src="images/QuikStockLanding.png" alt="QuikStock Landing" class="img-fluid thumbnail" onclick="openModal(this.src)">
             <div class="card-body">
-              <p class="card-text">The landing page of the prototype</p>
+              <p class="card-text">The landing page of the prototype.  The sole purpose of this applicaiton is to look up a stock,
+                therefore the design should reflect that simplicity and minimalism.  A single search bar is provided to the user, along with a search button. 
+                Beneath is a brief news feed of market news, and above is a navigation bar, of which one of the options is to view recently searched/ 
+                saved stocks to future access.
+              </p>
             </div>
           </div>
         </div>
@@ -106,7 +110,11 @@
             <h4 class="card-title" style = "padding: 5px;">Search Result Page</h4>
             <img src="images/QuikStockData.png" alt="QuikStock Search" class="img-fluid thumbnail" onclick="openModal(this.src)">
             <div class="card-body">
-              <p class="card-text">The data result page of the prototype</p>
+              <p class="card-text">The data result page of the prototype. Post-search, a user receives key information about their company's stock.
+                Additionally, a chart is provided to visualize the stock's performance, with a dropdown that allows the user to select a time frame.
+                These seperate sections are delineated by cards on a contrasted background for visibility and clarity.
+                Once again, the design is minimalistic, serving the purrpose of the prototype.">
+              </p>
             </div>
           </div>
         </div>
@@ -150,6 +158,48 @@
               <p class="card-text">Showcasing what a search would look like having gone through the clothing category,
                 the user is able to navigate through a filter of options.  In this case they are viewing pairs of pants, being filtered
                 by price by ascending order. A breadcrumb is also provided to assist the user in navigation to previous pages.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <br>
+
+
+      <!-- Shredded-->
+      <div class="row text-center mb-5">
+        <div class="col">
+          <strong style="font-size: 1.5rem;">Figma Design: "Shredded"</strong>
+          <p class="small">Pages designed for a fictional fitness app.  I tried to emphasis clustering and grouping
+            of elements, while prioritizing and distilling down the most important features, making them easily accessible
+          </p>
+        </div>
+      </div>
+    
+      <div class="row text-center mb-5">
+        <div class="col-md-6 mb-3">
+          <div class="card text-white" style = "padding: 10px; background-color: rgb(59, 59, 212); box-shadow: 8px 8px 8px rgba(0, 0, 0, 0.6);">
+            <h4 class="card-title" style = "padding: 5px;">Landing Page</h4>
+            <img src="images/ShreddedHome.png" alt="Shredded Home" class="img-fluid thumbnail" onclick="openModal(this.src)">
+            <div class="card-body">
+              <p class="card-text">The landing page of the app. Here, the user is greeted with all features categorized into thier
+                own respective buttons which bring the user to the respective page.  Common iconography is used, and is repeated on the following
+                page for consistency and easy recognition.  At the bottom of the page is a brief description of the current work that day,
+                as well as snippets of user's fitness accomplishments to bolster motivation upon opening the app.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-6 mb-3">
+          <div class="card text-white" style = "padding: 10px; background-color: rgb(59, 59, 212); box-shadow: 8px 8px 8px rgba(0, 0, 0, 0.6);">
+            <h4 class="card-title" style = "padding: 5px;">Clothing Search</h4>
+            <img src="images/ShreddedDiet.png" alt="Shredded Diet" class="img-fluid thumbnail" onclick="openModal(this.src)">
+            <div class="card-body">
+              <p class="card-text">This page showcases a diet plan for the user, with a listing of that current days meals, and
+                each item's nutritional information which can be acccessed by a dropdown menu. Immediate information about thier chosen
+                diet plan is provided at the top, along with the amount of calories needed for the day.
+                The design emphasizes clarity and ease of use, allowing users to focus on their fitness goals.
               </p>
             </div>
           </div>
