--- a/index.html
+++ b/index.html
@@ -23,20 +23,16 @@
     }
 
 
-    .carousel-inner {
-      width: 100%;
-      max-height: 600px; /* optional: limits large images on big screens */
-    }
-    
-    .carousel-item {
-      height: 100%;
-    }
-
-    .carousel-item img {
-      width: 100%;
-      height: auto;        /* allow natural height */
-      display: block;
-    }
+.carousel-inner {
+  aspect-ratio: 16 / 9;
+  width: 100%;
+  overflow: hidden;
+}
+.carousel-item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 
 
     #portfolioCarousel {
@@ -103,7 +99,7 @@
             <img src="images/ShoppeLanding.png" class="d-block w-100 img-fluid" alt="Project 4">
           </div>
           <div class="carousel-item">
-            <img src="images/borderslandingnotrans.jpg" class="d-block w-100 img-fluid" alt="Project 5">
+            <img src="images/campAIgn-landing.jpg" class="d-block w-100 img-fluid" alt="Project 5">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#portfolioCarousel" data-bs-slide="prev">
