--- a/portfolio.html
+++ b/portfolio.html
@@ -179,7 +179,7 @@
       <div class="row text-center mb-5">
         <div class="col-md-6 mb-3">
           <div class="card text-white" style = "padding: 10px; background-color: rgb(59, 59, 212); box-shadow: 8px 8px 8px rgba(0, 0, 0, 0.6);">
-            <h4 class="card-title" style = "padding: 5px;">Landing Page</h4>
+            <h4 class="card-title" style = "padding: 5px;">Home Page</h4>
             <img src="images/ShreddedHome.png" alt="Shredded Home" class="img-fluid thumbnail" onclick="openModal(this.src)">
             <div class="card-body">
               <p class="card-text">The landing page of the app. Here, the user is greeted with all features categorized into thier
@@ -193,7 +193,7 @@
 
         <div class="col-md-6 mb-3">
           <div class="card text-white" style = "padding: 10px; background-color: rgb(59, 59, 212); box-shadow: 8px 8px 8px rgba(0, 0, 0, 0.6);">
-            <h4 class="card-title" style = "padding: 5px;">Clothing Search</h4>
+            <h4 class="card-title" style = "padding: 5px;">Diet Page</h4>
             <img src="images/ShreddedDiet.png" alt="Shredded Diet" class="img-fluid thumbnail" onclick="openModal(this.src)">
             <div class="card-body">
               <p class="card-text">This page showcases a diet plan for the user, with a listing of that current days meals, and
