--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <img src="images/siteLogo-negate.png" alt="Site Logo" width="30" height="30">
     </a>
     <div>
-      <a href="portfolio.html" class="text-white text-decoration-none">Portfolio</a>
+      <a href="portfolio.html" class="text-white text-decoration-none">Projects</a>
     </div>
   </div>
 </nav>
@@ -63,10 +63,11 @@
     <div class="row align-items-center">
       <div class="col-md-6">
         <h1 class="display-4">Daniel Rapuano</h1>
-        <p class="lead text-decoration-underline">UI/UX Designer / Frontend Developer </p>
-        <p>Welcome to my personal website. It provides examples of my work located in the portfolio,  as well as insight into my background. Located at the bottom of the page
-        Within the portfolio page is a sample of projects I contributed to either collaboratively, following AGILE methodology and deadlines, as well various personal projects including Figma designs and protypes I've coded.</p>
-        <a href="portfolio.html" class="btn btn-light mt-3 mb-4">Go to Portfolio</a>
+        <p>Welcome to my personal website. Here I upload coding projects, design projects, and anything else
+          I find interesting when it comes to technology. Below you can find a link to some of my work,
+          as well as a brief summary of my background and skills.
+        </p>
+        <a href="portfolio.html" class="btn btn-light mt-3 mb-4">View some projects</a>
       </div>
       <div class="col-md-6 text-center">
         <img src="images/devs-dan-resize.jpg" alt="Daniel Rapuano" class="img-fluid rounded">
@@ -86,21 +87,23 @@
     <div class="row"> <!-- smaller width on desktop -->
       <div id="portfolioCarousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
         <div class="carousel-inner rounded shadow">
+          <div class="carousel-item">
+            <img src="images/Home-After.png" class="d-block w-100 img-fluid" alt="Project 5">
+          </div>
+          <div class="carousel-item">
+            <img src="images/ShoppeLanding.png" class="d-block w-100 img-fluid" alt="Project 4">
+          </div>
+          <div class="carousel-item">
+            <img src="images/Generation-same.png" class="d-block w-100 img-fluid" alt="Project 3">
+          </div>
           <div class="carousel-item active">
             <img src="images/QuikStockData.png" class="d-block w-100 img-fluid" alt="Project 1">
           </div>
           <div class="carousel-item">
             <img src="images/ShoppePants.png" class="d-block w-100 img-fluid" alt="Project 2">
           </div>
-          <div class="carousel-item">
-            <img src="images/add-campaign.jpg" class="d-block w-100 img-fluid" alt="Project 3">
-          </div>
-          <div class="carousel-item">
-            <img src="images/ShoppeLanding.png" class="d-block w-100 img-fluid" alt="Project 4">
-          </div>
-          <div class="carousel-item">
-            <img src="images/campAIgn-landing.jpg" class="d-block w-100 img-fluid" alt="Project 5">
-          </div>
+
+
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#portfolioCarousel" data-bs-slide="prev">
           <span class="carousel-control-prev-icon"></span>
@@ -123,24 +126,16 @@
       <div class="card summary-card p-4">
         <h4 class="card-title">A Brief Summary of Me</h4>
         <p class="card-text mt-3">
-          Computer science and human psychology are the apex of modern business. I understood this early on, now having degrees in both. I graduated
+          My passion is for technology.  Whether that is programming and designing my own applicaitons or websites, or just learning
+          new tools and software. In my spare time I write and record music, edit video, amongst other activities that demand I learn various
+          uniquely focused software quickly, and proficiently. </p>
+        <p class ="card-text mt-3">I graduated
           in 2017 from the University of Connecticut with a BA in Psychological Sciences, and in 2024 from the Southern Connecticut State University
           with a BS in Computer Science.  Throughout my education, when I wasn't studying, I was almost always working.  These jobs may have been 
-          menial, such as being a cook, or a cashier, but they taught me how to work under stress with a team efficeintly, as well as how to work with customers.
-          </p>
-
-          <p class ="card-text">
-          My education and experience have given me skills through accredited psychological research, application design and development
-          including usability testing with a focus on UX, front-end and back-end development utilizing technologies such as HTML, Bootstrap, 
-          Tailwind, JavaScript, React, and more.  Futhermore, I have experience with various design tools including Figma and Adobe Creative Suite.
-          My mix of both psychological and technical knowledge allows me to fully understand, and execute the application design process from start to finish,
-          with a focus on how the user will interact with the product.
-          </p>
-
-          <p class ="card-text">
-          I strongly believe as technology continues to permeate our lives, and as we become increasingly reliant on it, the need for a human-centered approach to design is paramount.
-          I am passionate about creating products that are not only functional but also enjoyable and natural to use. I strive to create designs that are intuitive, accessible, and engaging.
+          menial, such as being a cook, or a cashier, but they taught me how to work under stress with a team efficeintly, as well as how to work with customers
+          in focused capacity in order to meet their specific needs; skills transferable to any job I may have in the future.
         </p>
+ 
       </div>
     </div>
   </div>
