--- a/index.html
+++ b/index.html
@@ -4,149 +4,181 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Daniel Rapuano - UX Designer</title>
+
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=DM+Sans:400,500,700&display=swap" rel="stylesheet">
+
   <style>
     body {
       font-family: 'DM Sans', sans-serif;
+
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-position: center;
     }
+
     .summary-card {
       border-top: solid;
       border-bottom: solid;
       border-top-color: rgb(59, 59, 212);
       border-bottom-color: rgb(59, 59, 212);
-
     }
+
     .carousel-fade .carousel-item {
       transition: opacity 1s ease;
     }
-
 
 .carousel-inner {
   aspect-ratio: 16 / 9;
   width: 100%;
   overflow: hidden;
 }
+
+.carousel-item {
+  height: 100%;
+}
+
 .carousel-item img {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  display: block;
 }
-
 
     #portfolioCarousel {
       box-shadow: 0 8px 20px rgb(59, 59, 212);
       border-radius: 0 0 10px 10px;
-  }
-  .navbar .nav-link:hover {
-    text-decoration: underline;
-  }
+    }
 
+    .navbar .nav-link:hover {
+      text-decoration: underline;
+    }
+
+    .hero-section {
+      padding-bottom: 0.5rem;
+    }
+
+    .image-gradient-overlay {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 50%;
+      height: 100%;
+      background: linear-gradient(to right, white 0%, transparent 100%);
+      z-index: 1;
+      pointer-events: none;
+    }
   </style>
 </head>
+
 <body>
 
-<!-- Navbar -->
-<nav class="navbar navbar-expand-lg px-4" style="background-color: rgb(59, 59, 212); box-shadow: rgba(59, 59, 212, 0.2);">
-  <a class="navbar-brand" href="index.html">
-    <img src="images/siteLogo-negate.png" alt="Site Logo" width="30" height="30">
-  </a>
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg px-4" style="background-color: rgb(59, 59, 212); box-shadow: rgba(59, 59, 212, 0.2);">
+    <a class="navbar-brand" href="index.html">
+      <img src="images/siteLogo-negate.png" alt="Site Logo" width="30" height="30">
+    </a>
+    <div class="d-flex ms-auto">
+      <a href="portfolio.html" class="nav-link text-white me-4">Projects</a>
+      <a href="reports.html" class="nav-link text-white">Reports</a>
+    </div>
+  </nav>
 
-  <div class="d-flex ms-auto">
-    <a href="portfolio.html" class="nav-link text-white me-4">Projects</a>
-    <a href="https://docs.google.com/document/d/1ClsPPgi_Iko-abdvHyR-lzetCGBqWZGg1gmByiHWZiY/edit?tab=t.0" class="nav-link text-white">Application Redesign Report</a>
-  </div>
-</nav>
-<br>
 
-<!-- Hero Section -->
-<div class="jumbotron text-center text-white py-5" style="background-color: rgb(59, 59, 212);">
-  <div class="container">
-    <div class="row align-items-center">
-      <div class="col-md-6">
-        <h1 class="display-4">Daniel Rapuano</h1>
-        <p>Welcome to my personal website. Here I upload coding projects, design projects, and anything else
+  <!-- Hero Section -->
+  <section class="hero-section">
+    <div class="container-fluid">
+      <div class="row align-items-stretch">
+        <!-- Left Column (Text) -->
+      <div class="col-md-6 d-flex flex-column justify-content-center py-4 px-3 bg-white">
+        <div class = "p-5">
+          <h1 class="display-4">Daniel Rapuano</h1>
+          <p>
+          Welcome to my personal website. Here I upload coding projects, design projects, and anything else
           I find interesting when it comes to technology. Below you can find a link to some of my work,
-          as well as a brief summary of my background and skills.
-        </p>
-        <a href="portfolio.html" class="btn btn-light mt-3 mb-4">View some projects</a>
-        <a href="https://docs.google.com/document/d/1ClsPPgi_Iko-abdvHyR-lzetCGBqWZGg1gmByiHWZiY/edit?tab=t.0" class="btn btn-light mt-3 mb-4">Application Redesign Report</a>
+          as well as a brief summary of my background and skills located at the bottom of the page.
+          </p>
+          <a href="portfolio.html" class="btn btn-primary mt-3 mb-4 justify-content-center">Go to Projects</a>
+          <a href="reports.html" class="btn btn-primary mt-3 mb-4 justify-content-center">View Reports</a>
+        </div>
       </div>
-      <div class="col-md-6 text-center">
-        <img src="images/devs-dan-resize.jpg" alt="Daniel Rapuano" class="img-fluid rounded">
-        <div class="mt-3">
-          <a href="https://www.linkedin.com/in/daniel-rapuano/">
-            <img src="images/linkedin-logo-negate.png" alt="LinkedIn" width="40" height="35">
-          </a>
+
+        <!-- Right Column (Image + Gradient) -->
+        <div class="col-md-6 p-0">
+          <div class="position-relative h-100 w-100">
+            <img src="images/devs-dan-resize.jpg" class="w-100 h-100 object-fit-cover" style="object-fit: cover;" alt="Daniel Rapuano">
+            <div class="image-gradient-overlay"></div>
+            <div class="position-absolute bottom-0 end-0 me-3 mb-3" style="z-index: 2;">
+              <a href="https://www.linkedin.com/in/daniel-rapuano/">
+                <img src="images/linkedin-logo-negate.png" alt="LinkedIn" width="40" height="35">
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Carousel Section -->
+  <section class="container my-5">
+    <div class="row justify-content-center">
+      <div class="row">
+        <div id="portfolioCarousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
+          <div class="carousel-inner rounded shadow">
+            <div class="carousel-item active">
+              <img src="images/Home-After.png" class="d-block w-100 img-fluid" alt="Project 1">
+            </div>
+            <div class="carousel-item">
+              <img src="images/ShoppeLanding.png" class="d-block w-100 img-fluid" alt="Project 2">
+            </div>
+            <div class="carousel-item">
+              <img src="images/QuikStockData.png" class="d-block w-100 img-fluid" alt="Project 3">
+            </div>
+            <div class="carousel-item">
+              <img src="images/ShreddedHome.png" class="d-block w-100 img-fluid" alt="Project 4">
+            </div>
+            <div class="carousel-item">
+              <img src="images/Generation-same.png" class="d-block w-100 img-fluid" alt="Project 5">
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#portfolioCarousel" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#portfolioCarousel" data-bs-slide="next">
+            <span class="carousel-control-next-icon"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Summary Section -->
+  <div class="container my-5">
+    <div class="row justify-content-center">
+      <div class="col-lg-10 col-md-8">
+        <div class="card summary-card p-4">
+          <h4 class="card-title">A Brief Summary</h4>
+            <p class="card-text mt-3">
+              My passion is for technology.  Whether that is programming and designing my own applicaitons or websites, or just learning
+              new tools and software. In my spare time I write and record music, edit video, amongst other activities that demand I learn various
+              uniquely focused software quickly, and proficiently. </p>
+            <p class ="card-text mt-3">I graduated
+              in 2017 from the University of Connecticut with a BA in Psychological Sciences, and in 2024 from the Southern Connecticut State University
+              with a BS in Computer Science.  Throughout my education, when I wasn't studying, I was almost always working.  These jobs may have been 
+              menial, such as being a cook, or a cashier, but they taught me how to work under stress with a team efficeintly, as well as how to work with customers
+              in focused capacity in order to meet their specific needs; skills transferable to any job I may have in the future.
+            </p>
+
         </div>
       </div>
     </div>
   </div>
-</div>
 
-<!-- Carousel Section -->
-<section class="container my-5">
-  <div class="row justify-content-center">
-    <div class="row"> <!-- smaller width on desktop -->
-      <div id="portfolioCarousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
-        <div class="carousel-inner rounded shadow">
-          <div class="carousel-item">
-            <img src="images/Home-After.png" class="d-block w-100 img-fluid" alt="Project 1">
-          </div>
-          <div class="carousel-item">
-            <img src="images/ShoppeLanding.png" class="d-block w-100 img-fluid" alt="Project 2">
-          </div>
-          <div class="carousel-item">
-            <img src="images/QuikStockData.png" class="d-block w-100 img-fluid" alt="Project 3">
-          </div>
-          <div class="carousel-item active">
-            <img src="images/ShreddedHome.png" class="d-block w-100 img-fluid" alt="Project 4">
-          </div>
-          <div class="carousel-item">
-            <img src="images/Generation-same.png" class="d-block w-100 img-fluid" alt="Project 5">
-          </div>
-
-
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#portfolioCarousel" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#portfolioCarousel" data-bs-slide="next">
-          <span class="carousel-control-next-icon"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-      </div>
-    </div>
-  </div>
-</section>
-
-
-<!-- Summary Section -->
-<div class="container my-5">
-  <div class="row justify-content-center">
-    <div class="col-lg-10 col-md-8">
-      <div class="card summary-card p-4">
-        <h4 class="card-title">A Brief Summary of Me</h4>
-        <p class="card-text mt-3">
-          My passion is for technology.  Whether that is programming and designing my own applicaitons or websites, or just learning
-          new tools and software. In my spare time I write and record music, edit video, amongst other activities that demand I learn various
-          uniquely focused software quickly, and proficiently. </p>
-        <p class ="card-text mt-3">I graduated
-          in 2017 from the University of Connecticut with a BA in Psychological Sciences, and in 2024 from the Southern Connecticut State University
-          with a BS in Computer Science.  Throughout my education, when I wasn't studying, I was almost always working.  These jobs may have been 
-          menial, such as being a cook, or a cashier, but they taught me how to work under stress with a team efficeintly, as well as how to work with customers
-          in focused capacity in order to meet their specific needs; skills transferable to any job I may have in the future.
-        </p>
- 
-      </div>
-    </div>
-  </div>
-</div>
-
-<!-- Bootstrap JS -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
