--- a/portfolio.html
+++ b/portfolio.html
@@ -29,8 +29,8 @@
   </a>
 
   <div class="d-flex ms-auto">
-    <a href="portfolio.html" class="nav-link text-white me-4">Projects</a>
-    <a href="https://docs.google.com/document/d/1ClsPPgi_Iko-abdvHyR-lzetCGBqWZGg1gmByiHWZiY/edit?tab=t.0" class="nav-link text-white">Application Redesign Report</a>
+    <a href="index.html" class="nav-link text-white me-4">Home</a>
+    <a href="reports.html" class="nav-link text-white">Reports</a>
   </div>
 </nav>
       
